packages/ui-components/src/Containers/Sidebar/index.module.css
@reference "../../styles/index.css";

.wrapper {
  @apply ml:max-w-xs
    ml:overflow-auto
    ml:border-r
    scrollbar-thin
    ml:pb-[var(--header-height)]
    z-0
    flex
    w-full
    flex-col
    items-start
    gap-8
    border-r-0
    border-neutral-200
    bg-white
    px-4
    py-6
    sm:overflow-auto
    sm:border-r
    sm:pb-16
    md:max-w-xs
    lg:px-6
    dark:border-neutral-900
    dark:bg-neutral-950;

  .navigation {
    @apply ml:flex
      hidden;

    &:last-child {
      @apply pb-12;
    }
  }

  .mobileSelect {
    @apply ml:hidden
      flex
      w-full;
  }
}

